Project with tests and code cleaned